Implemented the base Chip-8 interpreter class with emulated memory and simple binary reading functionality.
ROM data and font data are loaded into typical locations in emulated memory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ add_executable(
     Hot-Chip
     src/main.cpp
     src/window/Window.cpp
+    src/interpreter/Chip8.cpp
 )
 
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)
