Implemented first opcode "clearDisplay()" in execute loop. Added debugging flag and debug outputs. Now throwing runtime errors when ROM provided is invalid.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,8 @@ add_executable(${PROJECT_NAME} ${SOURCES})
 # Enable warnings.
 # Only optimise for release and only use debug symbols for debug builds.
 target_compile_options(${PROJECT_NAME} PRIVATE
-    -Wall -Werror
-    $<$<CONFIG:Release>:-O3>
-    $<$<CONFIG:Debug>:-g -O0>
+    $<$<CONFIG:Release>:-O3 -Wall -Werror -Wextra>
+    $<$<CONFIG:Debug>:-g -DDEBUG -O0>
 )
 
 if (WIN32)
