Updated CMakeLists.txt to automatically copy SDL2.dll and Hot-Chip executable to project root. Updated README.md with build instructions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,23 @@ file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 
+if (WIN32)
+    set(SDL2_PATH "${CMAKE_CURRENT_SOURCE_DIR}/lib/SDL2-2.32.8/x86_64-w64-mingw32")
+
+    # Build for Windows with statically linked libraries for portability
+    set(CMAKE_EXE_LINKER_FLAGS "-static -static-libgcc -static-libstdc++")
+
+    # Use Windows CUI for output
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -mconsole")
+
+    # Copy SDL2.dll into project root if it doesn't exist
+    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E copy_if_different
+            "${SDL2_PATH}/bin/SDL2.dll"
+            "${CMAKE_CURRENT_SOURCE_DIR}/SDL2.dll"
+    )
+endif()
+
 # Enable warnings.
 # Only optimise for release and only use debug symbols for debug builds.
 target_compile_options(${PROJECT_NAME} PRIVATE
@@ -17,15 +34,12 @@ target_compile_options(${PROJECT_NAME} PRIVATE
     $<$<CONFIG:Debug>:-g -DDEBUG -O0>
 )
 
-if (WIN32)
-    set(SDL2_PATH "lib/SDL2-2.32.8/x86_64-w64-mingw32")
-    set(CMAKE_EXE_LINKER_FLAGS "-static -static-libgcc -static-libstdc++")
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -mconsole")
-endif()
+# Output executable to project root
+set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)
+set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)
 
 find_package(SDL2 REQUIRED)
-include_directories(${SDL2_INCLUDE_DIR})
+target_include_directories(${PROJECT_NAME} PRIVATE ${SDL2_INCLUDE_DIR})
 target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARY})
