Setup ImGUI in project and added the first window, a hex memory viewer for emulated memory. Now passing read-only emulated memory/registers to Window class for rendering debug info. Updated CMakeLists.txt to include ImGUI. Fixed bug in main.cpp to pass Window object by reference, not copy.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,21 @@ set(CMAKE_CXX_STANDARD 23)
 project(Hot-Chip)
 
 # Find all *.cpp files in src/ recursively
-file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS
+file(GLOB_RECURSE SOURCE CONFIGURE_DEPENDS
     src/*.cpp
 )
 
-add_executable(${PROJECT_NAME} ${SOURCES})
+# Add ImGUI files for compilation
+file(GLOB IMGUI_SOURCE CONFIGURE_DEPENDS
+    lib/imgui/imgui.cpp
+    lib/imgui/imgui_draw.cpp
+    lib/imgui/imgui_tables.cpp
+    lib/imgui/imgui_widgets.cpp
+    lib/imgui/backends/imgui_impl_sdl2.cpp
+    lib/imgui/backends/imgui_impl_sdlrenderer2.cpp
+)
+
+add_executable(${PROJECT_NAME} ${SOURCE} ${IMGUI_SOURCE})
 
 if (WIN32)
     set(SDL2_PATH "${CMAKE_CURRENT_SOURCE_DIR}/lib/SDL2-2.32.8/x86_64-w64-mingw32")
@@ -21,9 +31,9 @@ if (WIN32)
 
     # Copy SDL2.dll into project root if it doesn't exist
     add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-            COMMAND ${CMAKE_COMMAND} -E copy_if_different
-            "${SDL2_PATH}/bin/SDL2.dll"
-            "${CMAKE_CURRENT_SOURCE_DIR}/SDL2.dll"
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        "${SDL2_PATH}/bin/SDL2.dll"
+        "${CMAKE_CURRENT_SOURCE_DIR}/SDL2.dll"
     )
 endif()
 
@@ -38,8 +48,17 @@ target_compile_options(${PROJECT_NAME} PRIVATE
 set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)
 
+# Use tcbrindle's FindSDL2.cmake module to help find SDL2 library files
+set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)
 find_package(SDL2 REQUIRED)
-target_include_directories(${PROJECT_NAME} PRIVATE ${SDL2_INCLUDE_DIR})
+
+# Make header files accessible across all .cpp files
+target_include_directories(${PROJECT_NAME} PUBLIC
+    ${SDL2_INCLUDE_DIR}
+    ${CMAKE_SOURCE_DIR}/lib/imgui
+    ${CMAKE_SOURCE_DIR}/lib/imgui-addons
+    ${CMAKE_SOURCE_DIR}/lib/imgui/backends
+)
+
 target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARY})
