Added SDL2 library to repository as a submodule. Updated CMakeLists.txt with simplified build instructions, now using Ninja as the build system.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.20)
 
 set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 project(Hot-Chip)
 
 # Find all *.cpp files in src/ recursively
@@ -20,9 +22,10 @@ file(GLOB IMGUI_SOURCE CONFIGURE_DEPENDS
 
 add_executable(${PROJECT_NAME} ${SOURCE} ${IMGUI_SOURCE})
 
-if (WIN32)
-    set(SDL2_PATH "${CMAKE_CURRENT_SOURCE_DIR}/lib/SDL2-2.32.8/x86_64-w64-mingw32")
+# Add SDL2 files for compilation
+add_subdirectory(lib/SDL2)
 
+if (WIN32)
     # Build for Windows with statically linked libraries for portability
     set(CMAKE_EXE_LINKER_FLAGS "-static -static-libgcc -static-libstdc++")
 
@@ -32,8 +35,8 @@ if (WIN32)
     # Copy SDL2.dll into project root if it doesn't exist
     add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        "${SDL2_PATH}/bin/SDL2.dll"
-        "${CMAKE_CURRENT_SOURCE_DIR}/SDL2.dll"
+        $<TARGET_FILE:SDL2>
+        "${CMAKE_SOURCE_DIR}/SDL2.dll"
     )
 endif()
 
@@ -47,18 +50,12 @@ target_compile_options(${PROJECT_NAME} PRIVATE
 # Output executable to project root
 set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
 
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-# Use tcbrindle's FindSDL2.cmake module to help find SDL2 library files
-set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)
-find_package(SDL2 REQUIRED)
-
 # Make header files accessible across all .cpp files
 target_include_directories(${PROJECT_NAME} PUBLIC
-    ${SDL2_INCLUDE_DIR}
+    ${CMAKE_SOURCE_DIR}/lib/SDL2
     ${CMAKE_SOURCE_DIR}/lib/imgui
     ${CMAKE_SOURCE_DIR}/lib/imgui-addons
     ${CMAKE_SOURCE_DIR}/lib/imgui/backends
 )
 
-target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARY})
+target_link_libraries(${PROJECT_NAME} SDL2::SDL2)
