Overhauled ROM loading behaviour to allow for ROMs to be swapped out and for emulator state to be cleared. Added a "Load ROM" button using NFDe for platform independent file opening. Renamed "Window" class to "MainWindow" due to naming conflicts between Hot-Chip and NFDe library.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/SDL2"]
 	path = lib/SDL2
 	url = https://github.com/libsdl-org/SDL.git
+[submodule "lib/NFDe"]
+	path = lib/NFDe
+	url = https://github.com/btzy/nativefiledialog-extended.git
